--- a/package.json
+++ b/package.json
@@ -39,10 +39,12 @@
     "@angular-devkit/core": "^8.0.0-beta.15",
     "@angular-devkit/schematics": "^8.0.0-beta.15",
     "@angular/bazel": "file:./tools/npm/@angular_bazel",
-    "@bazel/jasmine": "0.37.1",
-    "@bazel/karma": "0.37.1",
-    "@bazel/protractor": "0.37.1",
-    "@bazel/typescript": "0.37.1",
+    "@bazel/jasmine": "0.38.0",
+    "@bazel/karma": "0.38.0",
+    "@bazel/protractor": "0.38.0",
+    "@bazel/rollup": "0.38.0",
+    "@bazel/terser": "0.38.0",
+    "@bazel/typescript": "0.38.0",
     "@microsoft/api-extractor": "^7.3.9",
     "@schematics/angular": "^8.0.0-beta.15",
     "@types/angular": "^1.6.47",
@@ -84,6 +86,7 @@
     "domino": "2.1.2",
     "fs-extra": "4.0.2",
     "hammerjs": "2.0.8",
+    "http-server": "^0.11.1",
     "incremental-dom": "0.4.1",
     "jasmine": "^3.1.0",
     "jasmine-core": "^3.1.0",
@@ -97,11 +100,11 @@
     "nodejs-websocket": "^1.7.2",
     "protractor": "^5.4.2",
     "reflect-metadata": "^0.1.3",
-    "rollup": "^1.1.0",
-    "rollup-plugin-amd": "^3.0.0",
-    "rollup-plugin-commonjs": "^9.2.1",
+    "rollup": "1.21.4",
+    "rollup-plugin-amd": "^4.0.0",
+    "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-json": "^4.0.0",
-    "rollup-plugin-node-resolve": "^4.0.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-sourcemaps": "^0.4.2",
     "rxjs": "^6.4.0",
     "selenium-webdriver": "3.5.0",
