--- a/packages/zone.js/BUILD.bazel
+++ b/packages/zone.js/BUILD.bazel
@@ -3,6 +3,7 @@ load("//packages/zone.js:bundles.bzl", "ES2015_BUNDLES", "ES5_BUNDLES", "ES5_GLO
 
 exports_files([
     "tsconfig.json",
+    "rollup.config.js",
 ])
 
 genrule(
